--- a/web/src/components/Navigation.module.scss
+++ b/web/src/components/Navigation.module.scss
@@ -23,8 +23,8 @@
       content: "";
       width: 20px;
       height: 20px;
-      background: url(../../public/images/icon_arrow_right.svg) center/contain
-        no-repeat;
+      // background: url(../../public/images/icon_arrow_right.svg) center/contain
+      //   no-repeat;
       margin-right: 4px;
       vertical-align: middle;
     }
