--- a/web/src/assets/scss/section/header.scss
+++ b/web/src/assets/scss/section/header.scss
@@ -9,23 +9,15 @@
     @include flex($justify: space-between);
     height: 100%;
     .ci a {
-      display: block;
       width: 140px;
       height: 48px;
-      margin: 0;
-      padding: 0;
-      font-size: 0;
-      line-height: 0;
-      background: url(../../img/logo_w.svg) center/contain no-repeat;
     }
   }
   nav {
     height: 100%;
     .gnb {
-      @include flex($justify: center);
-      position: relative;
+      @include flex();
       height: 100%;
-      margin: auto;
       .menu {
         @include flex($justify: center);
         position: relative;
@@ -33,88 +25,58 @@
         padding: 0 40px;
         transition: 0.2s;
         a {
-          font-size: 18px;
+          font-weight: 600;
           color: $text-white;
           transition: 0.2s;
         }
         &:hover {
           background-color: $primary-variant;
           a {
-            transform: translate(0, 2px);
+            transform: translate(0, 12%);
           }
-          .gnbBody {
+          .menu-detail {
+            display: flex;
+          }
+        }
+        .menu-detail {
+          @include flex($justify: center);
+          display: none;
+          column-gap: 24px;
+          position: absolute;
+          bottom: 0;
+          width: 200vw;
+          height: 52px;
+          background-color: $primary-variant90;
+          transform: translate(0, 100%);
+          z-index: 100;
+          li {
+            position: relative;
+            font-weight: 600;
+            color: $text-white-dark;
+            &:hover {
+              color: $text-white;
+            }
+          }
+          &:hover {
             display: flex;
           }
         }
       }
     }
-  }
-}
-
-.gnbSearch {
-  // background: url(../../public//icon_search.svg) center/contain no-repeat;
-  background-size: 60%;
-  width: 52px;
-  height: 52px;
-}
-
-// .gnbCalendar {
-//   background: url(../../public/icon_calendar.svg) center/contain no-repeat;
-//   background-size: 60%;
-// }
-
-// .gnbPerson {
-//   background: url(../../public/icon_person.svg) center/contain no-repeat;
-//   background-size: 60%;
-// }
-
-.gnbBody {
-  @include flex($justify: center);
-  display: none;
-  column-gap: 24px;
-  position: absolute;
-  bottom: 0;
-  width: 200vw;
-  height: 48px;
-  transform: translate(0, 100%);
-  background-color: rgba($primary-variant, 0.8);
-  li {
-    position: relative;
-    bottom: -0.68ex;
-    font-size: 14px;
-    color: $text-white;
-    &:hover {
-      color: $text-white;
-    }
-  }
-  &:hover {
-    display: flex;
-  }
-}
-
-.lnb {
-  display: flex;
-  column-gap: 24px;
-  align-items: center;
-}
-
-.utilArea {
-  display: flex;
-  justify-content: space-between;
-  top: 16px;
-  ul {
-    display: flex;
-  }
-}
-
-.areaLink {
-  display: flex;
-  column-gap: 24px;
-  a {
-    font-size: 14px;
-    color: $text-white;
-    &:hover {
-      color: $text-white;
+    .lnb {
+      @include flex();
+      column-gap: 24px;
+      height: 100%;
+      li {
+        @include flex($justify: center);
+        height: 100%;
+        a {
+          color: $text-white-dark;
+          &:hover {
+            color: $text-white;
+          }
+        }
+      }
     }
   }
 }
