--- a/web/src/assets/scss/setting/_vars.scss
+++ b/web/src/assets/scss/setting/_vars.scss
@@ -1,6 +1,7 @@
 //color
 $primary-light: #5e46fe;
 $primary: #5924b5;
+$primary90: rgba($primary, 0.9);
 $primary-dark: #46109d;
 $primary-variant: #150e2c;
 $primary-variant90: rgba($primary-variant, 0.9);
