--- a/web/src/assets/scss/components/header.scss
+++ b/web/src/assets/scss/components/header.scss
@@ -8,7 +8,7 @@
   .layout {
     @include flex($justify: space-between);
     height: 100%;
-    .ci a {
+    .ci-w a {
       width: 140px;
       height: 48px;
     }
@@ -46,7 +46,7 @@
           bottom: 0;
           width: 200vw;
           height: 52px;
-          background-color: $primary-variant90;
+          background-color: $bg-black;
           transform: translate(0, 100%);
           z-index: 100;
           li {
