--- a/web/src/assets/scss/section/main.scss
+++ b/web/src/assets/scss/section/main.scss
@@ -1,322 +1,323 @@
 @import "../style.scss";
 
 // banner
-.hero-banner {
-  @include flex($justify: center);
-  position: relative;
-  width: 100%;
-  height: calc(100vh - var(--header-height));
-  max-height: 1080px;
-  background-color: $primary-variant;
-
-  //bg image
-  .bg {
+.wrapper.main {
+  .hero-banner {
     @include flex($justify: center);
-    height: 100%;
-    img {
-      height: 100%;
-    }
-  }
-
-  // arrow
-  .prev-btn,
-  .next-btn {
-    position: absolute;
-    transform: translate(0, -64px);
-    opacity: 0.5;
-    span {
-      width: 108px;
-      height: 108px;
-    }
-    &:hover {
-      opacity: 1;
-    }
-  }
-  .prev-btn {
-    left: 24px;
-  }
-  .next-btn {
-    right: 24px;
-  }
-
-  // progress bar
-  .list-banner {
-    @include flex();
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 128px;
-    background-color: $primary-variant90;
-    z-index: 1;
-    .content {
-      display: grid;
-      grid-template-columns: 2fr 1fr 1fr 1fr;
-      height: 100%;
-      li {
-        @include flex();
-        column-gap: 16px;
-        flex-grow: 1;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        padding: 0 24px;
-        overflow: hidden;
-        &:hover {
-          background-color: rgba($primary, 0.5);
-        }
-        & + li::before {
-          content: "";
-          display: inline-block;
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 1px;
-          height: 100%;
-          background-color: rgba($text-white, 0.1);
-        }
-        .area-text {
-          width: 100%;
-        }
-        .name,
-        .description {
-          width: 100%;
-          @include ellipsis();
-        }
-        .name {
-          margin-bottom: 12px;
-          font-weight: 600;
-          color: $text-white;
-        }
-        .description {
-          color: $text-light;
-        }
-        &:first-of-type {
-          flex-grow: 2;
-          &::before {
-            content: "";
-            width: 132px;
-            height: 132px;
-            background: url(../../img/icon_play.svg) center/contain no-repeat;
-          }
-          &:hover {
-            background-color: unset;
-          }
-        }
-      }
-    }
-  }
-}
-
-.nav-skip {
-  position: absolute;
-  right: 240px;
-  width: 96px;
-  background-color: $primary90;
-  transform: translate(0, -64px);
-  li {
-    @include flex($direction: column, $justify: center);
-    row-gap: 4px;
     position: relative;
     width: 100%;
-    height: 96px;
-    .ico-ticket {
-      width: 36px;
-      height: 36px;
+    height: calc(100vh - var(--header-height));
+    max-height: 1080px;
+    background-color: $primary-variant;
+
+    //bg image
+    .bg {
+      @include flex($justify: center);
+      height: 100%;
+      img {
+        height: 100%;
+      }
     }
-    .font-link {
-      color: $text-white;
-    }
-    & + li::before {
-      content: "";
-      display: inline-block;
+
+    // arrow
+    .prev-btn,
+    .next-btn {
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: rgba($text-white, 0.1);
-    }
-  }
-}
-
-.container {
-  width: 100%;
-  padding: 120px 0;
-  .layout {
-    @include flex($direction: column, $justify: center);
-  }
-  .title-main {
-    margin-bottom: 80px;
-  }
-}
-
-.boxoffice-cont {
-  background-color: $primary-variant;
-  .title-main {
-    .main span {
-      color: $primary-variant;
-    }
-    .sub {
-      color: $text-white;
-    }
-  }
-  .movie-list {
-    @include flex($justify: center, $wrap: wrap);
-    gap: 48px;
-    width: 100%;
-  }
-  .movie-card {
-    .rank {
-      color: $text-white;
-      background-color: $primary-variant90;
-    }
-    .name {
-      color: $text-white;
-    }
-    .des {
-      color: $text-light;
-      svg {
-        fill: $text-light;
+      transform: translate(0, -64px);
+      opacity: 0.5;
+      span {
+        width: 108px;
+        height: 108px;
       }
-    }
-    &:nth-of-type(1) {
-      // 1위
-      box-shadow: 4px 8px 16px rgba($primary-variant, 0.6);
-      transform-origin: top left;
-      &,
-      .rank {
-        background-color: $primary;
-      }
-      .des {
-        color: $text-white;
-        svg {
-          fill: $text-white;
-        }
-      }
-    }
-    &:hover {
-      .movieInfo {
+      &:hover {
         opacity: 1;
       }
     }
-  }
-}
+    .prev-btn {
+      left: 24px;
+    }
+    .next-btn {
+      right: 24px;
+    }
 
-// Recommend-movie
-.recommend-movie-cont {
-  background-color: $primary;
-  .title-main {
-    .main span {
-      color: $primary;
-    }
-    .sub {
-      color: $text-white;
-    }
-  }
-
-  .content {
-    @include flex($justify: center, $align: flex-start);
-    column-gap: 64px;
-    width: 80%;
-    height: 420px;
-    .area-img {
-      height: 100%;
-      font-size: 0;
-      box-shadow: 4px 8px 16px rgba($primary-variant, 0.6);
-    }
-    .area-text {
-      @include flex($direction: column, $align: flex-start);
-      height: 100%;
-      .name {
-        color: $text-white;
-        font-weight: bold;
-        margin-bottom: 32px;
-      }
-      .description {
-        margin-bottom: 40px;
-        .font-big {
-          display: inline-block;
-          color: $text-white;
-          margin-bottom: 16px;
-        }
-        p {
-          color: $text-white-dark;
-          word-break: keep-all;
-        }
-      }
-      .review {
-        display: table;
-        width: 100%;
-        height: 100px;
-        & + .review {
-          margin-top: 12px;
-        }
-        .user {
-          display: table-cell;
-          width: 120px;
-          text-align: center;
-          vertical-align: middle;
-          color: $text-white;
-          .ico_person {
-            width: 40px;
-            height: 40px;
-          }
-        }
-        .wrap {
+    // progress bar
+    .list-banner {
+      @include flex();
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 128px;
+      background-color: $primary-variant90;
+      z-index: 1;
+      .content {
+        display: grid;
+        grid-template-columns: 2fr 1fr 1fr 1fr;
+        height: 100%;
+        li {
           @include flex();
+          column-gap: 16px;
+          flex-grow: 1;
+          position: relative;
           width: 100%;
           height: 100%;
-          text-align: center;
-          padding: 8px;
-          > div {
-            @include flex($direction: column, $justify: center);
+          padding: 0 24px;
+          overflow: hidden;
+          &:hover {
+            background-color: rgba($primary, 0.5);
+          }
+          & + li::before {
+            content: "";
+            display: inline-block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 1px;
             height: 100%;
+            background-color: rgba($text-white, 0.1);
+          }
+          .area-text {
+            width: 100%;
+          }
+          .name,
+          .description {
+            width: 100%;
+            @include ellipsis();
+          }
+          .name {
+            margin-bottom: 12px;
+            font-weight: 600;
             color: $text-white;
-            background-color: $primary-dark;
           }
-          .text {
-            width: 20%;
+          .description {
+            color: $text-light;
           }
-          .point {
-            width: 20%;
-          }
-          .comment {
-            width: 40%;
+          &:first-of-type {
+            flex-grow: 2;
+            &::before {
+              content: "";
+              width: 132px;
+              height: 132px;
+              background: url(../../img/icon_play.svg) center/contain no-repeat;
+            }
+            &:hover {
+              background-color: unset;
+            }
           }
         }
       }
     }
   }
-}
 
-// Event
-.event-cont {
-  .title-main {
-    .main span {
-      color: $text-white;
-      background-color: $primary;
-      font-weight: 700;
-    }
-    .sub {
-      color: $primary;
-      font-weight: 700;
+  .nav-skip {
+    position: absolute;
+    right: 240px;
+    width: 96px;
+    background-color: $primary90;
+    transform: translate(0, -64px);
+    li {
+      @include flex($direction: column, $justify: center);
+      row-gap: 4px;
+      position: relative;
+      width: 100%;
+      height: 96px;
+      .ico-ticket {
+        width: 36px;
+        height: 36px;
+      }
+      .font-link {
+        color: $text-white;
+      }
+      & + li::before {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        background-color: rgba($text-white, 0.1);
+      }
     }
   }
 
-  .content {
-    position: relative;
+  .container {
     width: 100%;
-    height: 400px;
-    overflow-x: hidden;
-    ul {
-      @include flex($justify: center);
-      column-gap: 48px;
-      position: absolute;
-      li {
-        width: 400px;
-        height: 400px;
+    padding: 120px 0;
+    .layout {
+      @include flex($direction: column, $justify: center);
+    }
+    .title-main {
+      margin-bottom: 80px;
+    }
+  }
+
+  .boxoffice-cont {
+    background-color: $primary-variant;
+    .title-main {
+      .main span {
+        color: $primary-variant;
+      }
+      .sub {
+        color: $text-white;
+      }
+    }
+    .movie-list {
+      @include flex($justify: center, $wrap: wrap);
+      gap: 48px;
+      width: 100%;
+    }
+    .movie-card {
+      .rank {
+        color: $text-white;
+        background-color: $primary-variant90;
+      }
+      .name {
+        color: $text-white;
+      }
+      .des {
+        color: $text-light;
+        svg {
+          fill: $text-light;
+        }
+      }
+      &:nth-of-type(1) {
+        // 1위
+        box-shadow: 4px 8px 16px rgba($primary-variant, 0.6);
+        transform-origin: top left;
+        &,
+        .rank {
+          background-color: $primary;
+        }
+        .des {
+          color: $text-white;
+          svg {
+            fill: $text-white;
+          }
+        }
+      }
+      &:hover {
+        .movieInfo {
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  // Recommend-movie
+  .recommend-movie-cont {
+    background-color: $primary;
+    .title-main {
+      .main span {
+        color: $primary;
+      }
+      .sub {
+        color: $text-white;
+      }
+    }
+    .content {
+      @include flex($justify: center, $align: flex-start);
+      column-gap: 64px;
+      width: 80%;
+      height: 420px;
+      .area-img {
+        height: 100%;
+        font-size: 0;
+        box-shadow: 4px 8px 16px rgba($primary-variant, 0.6);
+      }
+      .area-text {
+        @include flex($direction: column, $align: flex-start);
+        height: 100%;
+        .name {
+          color: $text-white;
+          font-weight: bold;
+          margin-bottom: 32px;
+        }
+        .description {
+          margin-bottom: 40px;
+          .font-big {
+            display: inline-block;
+            color: $text-white;
+            margin-bottom: 16px;
+          }
+          p {
+            color: $text-white-dark;
+            word-break: keep-all;
+          }
+        }
+        .review {
+          display: table;
+          width: 100%;
+          height: 100px;
+          & + .review {
+            margin-top: 12px;
+          }
+          .user {
+            display: table-cell;
+            width: 120px;
+            text-align: center;
+            vertical-align: middle;
+            color: $text-white;
+            .ico_person {
+              width: 40px;
+              height: 40px;
+            }
+          }
+          .wrap {
+            @include flex();
+            width: 100%;
+            height: 100%;
+            text-align: center;
+            padding: 8px;
+            > div {
+              @include flex($direction: column, $justify: center);
+              height: 100%;
+              color: $text-white;
+              background-color: $primary-dark;
+            }
+            .text {
+              width: 20%;
+            }
+            .point {
+              width: 20%;
+            }
+            .comment {
+              width: 40%;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  // Event
+  .event-cont {
+    .title-main {
+      .main span {
+        color: $text-white;
         background-color: $primary;
+        font-weight: 700;
+      }
+      .sub {
+        color: $primary;
+        font-weight: 700;
+      }
+    }
+
+    .content {
+      position: relative;
+      width: 100%;
+      height: 400px;
+      overflow-x: hidden;
+      ul {
+        @include flex($justify: center);
+        column-gap: 48px;
+        position: absolute;
+        li {
+          width: 400px;
+          height: 400px;
+          background-color: $primary;
+        }
       }
     }
   }
