--- a/web/src/assets/scss/section/signIn.scss
+++ b/web/src/assets/scss/section/signIn.scss
@@ -1,203 +1,185 @@
-@import "../assets/scss/style.scss";
+@import "../style.scss";
 
-// background
-.login {
+.signin {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   text-align: center;
-  background-color: $primary-variant;
-  .content {
+  background-color: $bg-white;
+  .container {
+    @include flex($direction: column, $justify: center);
     display: inline-flex;
-    padding: 56px 52px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     gap: 48px;
     margin-top: 80px;
+    padding: 56px 52px;
     background: #fff;
     filter: drop-shadow(0px 1px 4px rgba(17, 17, 17, 0.1));
-  }
-}
-
-// logo
-// .ci {
-//   width: 156px;
-//   height: 52px;
-//   margin: auto;
-//   position: relative;
-// }
-// .ci a {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   padding: 0;
-//   font-size: 0;
-//   line-height: 0;
-//   background: url(../../public/images/logo_default.svg) center/contain no-repeat;
-// }
-
-// input
-.loginCont {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-}
-
-.inputCont {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
-}
-.inputBox {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  filter: drop-shadow(0px 1px 4px rgba(17, 17, 17, 0.1));
-}
-
-.idBox,
-.pwBox {
-  display: table;
-  gap: 16px;
-  width: 404px;
-  height: 50px;
-  flex-shrink: 0;
-  border: 1px solid #999;
-  padding: 8px 16px;
-  .icon-box {
-    display: table-cell;
-    width: 32px;
-    height: 20px;
-    vertical-align: middle;
-  }
-  .icon {
-    display: table-cell;
-    width: 20px;
-    height: 20px;
-  }
-  input {
-    border: 0;
-    padding: 0;
-    width: 100%;
-    font-size: 16px;
-    background: none;
-    vertical-align: middle;
-    height: 100%;
-    &:focus {
-      outline: none;
+    .ci-c a {
+      width: 140px;
+      height: 48px;
+    }
+    .input-Cont {
+      @include flex($direction: column, $justify: center);
+      gap: 24px;
+      .conetnt {
+        @include flex($direction: column, $align: flex-start);
+        gap: 16px;
+      }
     }
   }
-}
-.idBox {
-  .icon {
-    background: url(../../public/images/icon_user.svg) center/contain no-repeat;
-  }
-}
-.pwBox {
-  position: relative;
-  bottom: 1px;
-  .icon {
-    background: url(../../public/images/icon_lock.svg) center/contain no-repeat;
-  }
-}
 
-.idSave {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  input {
-    width: 20px;
-    height: 20px;
-    margin: 0;
+  .inputBox {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
-  label {
-    @extend h6;
-    color: #797979;
-    vertical-align: middle;
-    margin-bottom: -4px;
-  }
-}
 
-.btnLogin {
-  button {
-    color: var(--text-whitehite);
-    background-color: var(--primary-variantariant);
+  .idBox,
+  .pwBox {
+    display: table;
+    gap: 16px;
+    width: 404px;
+    height: 50px;
+    flex-shrink: 0;
+    border: 1px solid #999;
+    padding: 8px 16px;
+    .icon-box {
+      display: table-cell;
+      width: 32px;
+      height: 20px;
+      vertical-align: middle;
+    }
+    .icon {
+      display: table-cell;
+      width: 20px;
+      height: 20px;
+    }
+    input {
+      border: 0;
+      padding: 0;
+      width: 100%;
+      font-size: 16px;
+      background: none;
+      vertical-align: middle;
+      height: 100%;
+      &:focus {
+        outline: none;
+      }
+    }
   }
-}
-.loginNav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  li {
-    @extend h6;
-    color: #797979;
+  .idBox {
+    // .icon {
+    //   background: url(../../public/images/icon_user.svg) center/contain
+    //     no-repeat;
+    // }
   }
-  li + li::before {
-    content: "";
-    display: inline-block;
-    left: 12px;
-    width: 1px;
-    height: 12px;
-    margin: 0 16px;
-    background: #cdcdcd;
-    vertical-align: middle;
+  .pwBox {
+    position: relative;
+    bottom: 1px;
+    // .icon {
+    //   background: url(../../public/images/icon_lock.svg) center/contain
+    //     no-repeat;
+    // }
   }
-}
 
-.btnEtc {
-  display: flex;
-  width: 404px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 16px;
-  .icon-box {
-    position: absolute;
+  .idSave {
     display: flex;
     align-items: center;
-    width: 20px;
-    left: 16px;
-    height: 100%;
-    z-index: 1;
-  }
-  .icon {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: url(../../public/images/icon_user.svg) center/contain no-repeat;
-  }
-  button {
-    filter: drop-shadow(0px 1px 4px rgba(17, 17, 17, 0.1));
-  }
-  .btnNologin {
-    position: relative;
-    button {
-      background: #797979;
-      color: var(--text-whitehite);
+    gap: 8px;
+    input {
+      width: 20px;
+      height: 20px;
+      margin: 0;
+    }
+    label {
+      @extend h6;
+      color: #797979;
+      vertical-align: middle;
+      margin-bottom: -4px;
     }
   }
-  .btngoogle {
-    position: relative;
+
+  .btnLogin {
     button {
-      background: #e04a32;
       color: var(--text-whitehite);
+      background-color: var(--primary-variantariant);
     }
   }
-  .btnkakao {
-    position: relative;
-    button {
-      background: #fce943;
-      color: var(--color-text-black);
+  .loginNav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    li {
+      @extend h6;
+      color: #797979;
+    }
+    li + li::before {
+      content: "";
+      display: inline-block;
+      left: 12px;
+      width: 1px;
+      height: 12px;
+      margin: 0 16px;
+      background: #cdcdcd;
+      vertical-align: middle;
     }
   }
-  .btnnaver {
-    position: relative;
+
+  .btnEtc {
+    display: flex;
+    width: 404px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    .icon-box {
+      position: absolute;
+      display: flex;
+      align-items: center;
+      width: 20px;
+      left: 16px;
+      height: 100%;
+      z-index: 1;
+    }
+    .icon {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      // background: url(../../public/images/icon_user.svg) center/contain
+      //   no-repeat;
+    }
     button {
-      background: #03c75a;
-      color: var(--text-whitehite);
+      filter: drop-shadow(0px 1px 4px rgba(17, 17, 17, 0.1));
+    }
+    .btnNologin {
+      position: relative;
+      button {
+        background: #797979;
+        color: var(--text-whitehite);
+      }
+    }
+    .btngoogle {
+      position: relative;
+      button {
+        background: #e04a32;
+        color: var(--text-whitehite);
+      }
+    }
+    .btnkakao {
+      position: relative;
+      button {
+        background: #fce943;
+        color: var(--color-text-black);
+      }
+    }
+    .btnnaver {
+      position: relative;
+      button {
+        background: #03c75a;
+        color: var(--text-whitehite);
+      }
     }
   }
 }
