--- a/web/src/assets/scss/setting/_vars.scss
+++ b/web/src/assets/scss/setting/_vars.scss
@@ -6,7 +6,7 @@ $primary-dark: #46109d;
 $primary-variant: #150e2c;
 $primary-variant90: rgba($primary-variant, 0.9);
 
-$bg-white: #eaeaf1;
+$bg-white: #F5F5F5;
 $bg-black: #000000;
 
 $text-light: #888888;
