--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -12,6 +12,9 @@ main {
   position: relative;
   background-color: $bg-white;
 }
+.wrapper {
+  position: relative;
+}
 
 body {
   overflow-x: hidden;
