--- a/web/src/assets/scss/components/navigation.scss
+++ b/web/src/assets/scss/components/navigation.scss
@@ -1,10 +1,10 @@
 @import "../style.scss";
 
 .navigation {
+  position: absolute;
   @include flex();
   width: 100%;
   height: 48px;
-  border-bottom: solid 1px $text-white;
   .guide {
     @include flex();
     column-gap: 8px;
