--- a/web/src/assets/scss/section/main.scss
+++ b/web/src/assets/scss/section/main.scss
@@ -196,11 +196,6 @@
           }
         }
       }
-      &:hover {
-        .movieInfo {
-          opacity: 1;
-        }
-      }
     }
   }
 
@@ -224,9 +219,13 @@
         height: 100%;
         font-size: 0;
         box-shadow: 4px 8px 16px rgba($primary-variant, 0.6);
+        img {
+          height: 100%;
+        }
       }
       .area-text {
         @include flex($direction: column, $align: flex-start);
+        width: 100%;
         height: 100%;
         .name {
           color: $text-white;
